--- a/custom_components/ups_snmp_ha/manifest.json
+++ b/custom_components/ups_snmp_ha/manifest.json
@@ -8,8 +8,6 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/aburow/ups-snmp-ha/issues",
   "quality_scale": "internal",
-  "requirements": [
-    "pysnmp>=4.4.12"
-  ],
-  "version": "0.4.5"
+  "requirements": [],
+  "version": "0.4.6"
 }
